JumpScript/tests/baselines/reference/multipleDefaultExports01.errors.txt
tests/cases/conformance/es6/modules/m1.jump(1,22): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/es6/modules/m1.jump(5,25): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/es6/modules/m1.jump(10,16): error TS2528: A module cannot have multiple default exports.
tests/cases/conformance/es6/modules/m2.jump(3,1): error TS2348: Value of type 'typeof foo' is not callable. Did you mean to include 'new'?


==== tests/cases/conformance/es6/modules/m1.jump (3 errors) ====
    export default class foo {
                         ~~~
!!! error TS2528: A module cannot have multiple default exports.
    
    }
    
    export default function bar() {
                            ~~~
!!! error TS2528: A module cannot have multiple default exports.
    
    }
    
    var x = 10;
    export default x;
                   ~
!!! error TS2528: A module cannot have multiple default exports.
    
==== tests/cases/conformance/es6/modules/m2.jump (1 errors) ====
    import Entity from "./m1"
    
    Entity();
    ~~~~~~~~
!!! error TS2348: Value of type 'typeof foo' is not callable. Did you mean to include 'new'?